# opencv_samples

./: .travis.yml  1.cpp  113492.cpp  14188-calc-eucliadian-distance-between-two-single-point.cpp  171913.cpp  234132.py  23910.cpp  24405.cpp  24463.cpp  25912.cpp  28899.cpp  30082-detect-and-remove-borders-from-framed-photographs.cpp  31515-sorting-contours.cpp  36751-kmeans-clustering-for-vectorpoint2f-data-structure.cpp  4183.cpp  5147.cpp  52830-copy-even-rowscols-to-another-mat.cpp  5395-how-to-calculate-blurriness-and-sharpness-of-a-given-image.cpp  57532.cpp  59782.cpp  60945.cpp  64631.cpp  65061.cpp  65164-2.cpp  65164.cpp  65284-2.cpp  65284.cpp  66209.cpp  66623.cpp  67511.cpp  68942.cpp  69434.cpp  70629-2.cpp  70629.cpp  70958.cpp  71203.cpp  72386-how-to-get-fps-in-opencv-live-capture-a.cpp  72386-how-to-get-fps-in-opencv-live-capture-b.cpp  73016.cpp  73114.cpp  (+56 more)
MasteringOpenCV-Chapter5_NumberPlateRecognition/: README.md  trainSVM.cpp
rtsp/: VideoCapture-thread-test.cpp
scratch_pad/: constcascade.cpp  haarconsts.hpp
